<resources>
    <string name="app_name">Muzira</string>

    <string name="home__title__listening_to_music">Listening to music to keep your mood.</string>
    <string name="home__caption__music_brings_peace">Music brings peace to the heart. Listen to all music according to the features we have provided</string>
    <string name="home__action__get_started">Get started</string>
    <string name="home__caption__have_an_account">Already have an account?</string>
    <string name="home__action__login">Login</string>

    <string name="sign_in__title__login_now">Login Now</string>
    <string name="sign_in__caption__please_enter_the_details">Please enter the details below to continue</string>
    <string name="sign_in__action__login">Login</string>
    <string name="sign_in__title__email">Email</string>
    <string name="sign_in__title__password">Password</string>
    <string name="sign_in__caption__not_have_an_account">Don\'t have an account!</string>
    <string name="sign_in__action__register">Register</string>

    <string name="sign_up__title__get_started">Get started</string>
    <string name="sign_up__caption__please_enter_the_details">Please enter the details below to continue</string>
    <string name="sign_up__title__email">Email</string>
    <string name="sign_up__title__password">Password</string>
    <string name="sign_up__title__confirm_password">Confirm Password</string>
    <string name="sign_up__action__sign_up">Sign up</string>
    <string name="sign_up__caption__have_an_account">Already have an account?</string>
    <string name="sign_up__action__login">Login</string>

    <string name="player__title__now_playing">Now Playing</string>
    <string name="player__title__music_name">Terminator</string>
    <string name="player__caption__author">Asake</string>

    <string name="sign_in_error_no_user_found">No user found with such credentials. Please, try again</string>

    <string name="sign_up_error_invalid_email">Invalid email format</string>
    <string name="sign_up_error_invalid_password">Password must be longer than 8 symbols and contain at least one lowercase and uppercase character, numeric symbol and special sign</string>
    <string name="sign_up_error_empty_confirm_password">Passwords don\'t match</string>

    <string name="player_error_no_music_found">No music found</string>
</resources>
