<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".home.HomePageFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="340dp" />

    <TextView
        style="@style/Bold.ColorBlack.28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in__title__login_now"
        android:textAlignment="center" />

    <TextView
        style="@style/Thin.16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in__caption__please_enter_the_details"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:textColorHint="@color/gray">

        <EditText
            android:id="@+id/et_email"
            style="@style/Thin.ColorBlack"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/sign_in__title__email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/gray"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <EditText
            android:id="@+id/et_password"
            style="@style/Thin.ColorBlack"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/sign_in__title__password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Bold.ColorWhite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/red"
        android:text="@string/sign_in__action__login"
        app:cornerRadius="40dp" />
</LinearLayout>
